--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "eca-shared"]
 	path = eca-shared
-	url = ssh://git@github.com/eriqande/eca-shared.git
+	url = https://github.com/eriqande/eca-shared.git
