--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,9 @@ AM_INIT_AUTOMAKE
 AX_CHECK_GL
 AX_CHECK_GLU
 AX_CHECK_GLUT
+AC_PROG_RANLIB
 AC_PROG_CC
 AM_PROG_CC_C_O
 AC_CONFIG_FILES(Makefile)
+AC_CONFIG_SUBDIRS([eca-shared])
 AC_OUTPUT
