--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,21 @@
 *~
 .Rproj.user
 .Rhistory
+EchoedGtypData.txt
+GFMCMC_Errors.txt
+Makefile
+README.html
+a.out
+aa-EchoedGtypFreqCats.txt
+aa-LociAndAlleles.txt
+aa-Pi.aves
+aa-Pi.hist
+aa-PofZ.txt
+aa-ScaledLikelihood.txt
+aa-Theta.hist
+aa-ThetaAverages.txt
+autom4te.cache
+newhybs
+newhybsng
+simdata_nh
+xcode
